--- a/activity2/main.css
+++ b/activity2/main.css
@@ -4,7 +4,6 @@ margin: 12px 0;
 font-family: 'Georgia', Georgia, serif;
 font-size: 2.0;
 font-weight: bolder;
-
 }
 
 img {
@@ -16,3 +15,10 @@ font-family: 'Georgia', Georgia, serif;
 font-weight: normal;
 text-align: center;
 }
+
+ #basicwrapper {
+   max-width: 900px;
+   margin: 0 auto;
+
+
+ }
