More trial and error.

--- a/activity2/main.css
+++ b/activity2/main.css
@@ -21,11 +21,9 @@ font-weight: normal;
 text-align: center;
 }
 
- #basicwrapper {
+ .basicwrapper {
    max-width: 900px;
    margin: 0 auto;
    padding: 0 5%;
-   width: 500px;
-
 
  }
